mergeo para render

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_APP_PROJECT_ID=ventafacilapp-aa7ec
 VITE_APP_STORAGE_BUCKET=ventafacilapp-aa7ec.appspot.com
 VITE_APP_MSG_SENDER_ID=669965503497
 VITE_APP_APP_ID=1:669965503497:web:6bd57af0a1f03929fb3cd8
+VITE_APP_RUTA_GLOBAL=http://localhost:5173
